feat: add GetTraders http handler + pagination
